--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 _site/
+CV/NLaBergeCV.aux
+CV/NLaBergeCV.log
+CV/NLaBergeCV.out
+CV/NLaBergeCV.synctex.gz
+CV/NLaBergeCV.tex
+CV/NLaBergeCV.fdb_latexmk
+CV/resume.cls
